[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/stage_advance_panel.gd" type="Script" id=2]
[ext_resource path="res://assets/font_description.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/font_main.tres" type="DynamicFont" id=4]

[node name="StageAdvancePanel" type="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -122.5
margin_right = 193.0
margin_bottom = 122.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -189.0
margin_top = 13.0
margin_right = 189.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 4 )
text = "Pay for factory"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -77.0
margin_right = 77.0
margin_bottom = -19.0
custom_fonts/font = ExtResource( 4 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -171.0
margin_top = 84.0
margin_right = 170.0
margin_bottom = 133.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -119.5
margin_top = -77.0
margin_right = 119.5
margin_bottom = -19.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="PayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Pay[/center]"
text = "Pay"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="GoEndlessButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.5
margin_top = -75.0
margin_right = 93.5
margin_bottom = -19.0
custom_fonts/font = ExtResource( 4 )
text = "Go Endless"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="meta_clicked" from="DescriptionLabel" to="." method="_on_DescriptionLabel_meta_clicked"]
[connection signal="pressed" from="PayButton" to="." method="_on_PayButton_pressed"]
[connection signal="pressed" from="GoEndlessButton" to="." method="_on_GoEndlessButton_pressed"]
